Bug 337336 - libmm-qt compilation fails with MM 1.2
Summary: libmm-qt compilation fails with MM 1.2
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-10 20:41 UTC by Antonio Rojas
Modified: 2024-12-23 18:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-07-10 20:41:31 UTC
(not sure if this is the right component to file bugs for libmm-qt, apologies if not)
libmm-qt git master fails to compile agains MM 1.2

In file included from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.h:30:0,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.cpp:22:
/tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/generictypes.h:32:14: error: conflicting declaration 'typedef uint MMSmsCdmaTeleserviceId'
 typedef uint MMSmsCdmaTeleserviceId;
              ^
In file included from /usr/include/ModemManager/ModemManager.h:35:0,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/generictypes.h:26,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.h:30,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.cpp:22:
/usr/include/ModemManager/ModemManager-enums.h:728:3: note: previous declaration as 'typedef enum MMSmsCdmaTeleserviceId MMSmsCdmaTeleserviceId'
 } MMSmsCdmaTeleserviceId;
   ^
In file included from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.h:30:0,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.cpp:22:
/tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/generictypes.h:33:14: error: conflicting declaration 'typedef uint MMSmsCdmaServiceCategory'
 typedef uint MMSmsCdmaServiceCategory;
              ^
In file included from /usr/include/ModemManager/ModemManager.h:35:0,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/generictypes.h:26,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.h:30,
                 from /tmp/pacaurtmp-antonio/libmm-qt-git/src/libmm-qt/src/bearer.cpp:22:
/usr/include/ModemManager/ModemManager-enums.h:810:3: note: previous declaration as 'typedef enum MMSmsCdmaServiceCategory MMSmsCdmaServiceCategory'
 } MMSmsCdmaServiceCategory;
   ^
src/CMakeFiles/KF5ModemManagerQt.dir/build.make:54: recipe for target 'src/CMakeFiles/KF5ModemManagerQt.dir/bearer.cpp.o' failed
make[2]: *** [src/CMakeFiles/KF5ModemManagerQt.dir/bearer.cpp.o] Error 1
CMakeFiles/Makefile2:76: recipe for target 'src/CMakeFiles/KF5ModemManagerQt.dir/all' failed
make[1]: *** [src/CMakeFiles/KF5ModemManagerQt.dir/all] Error 2
Makefile:127: recipe for target 'all' failed
make: *** [all] Error 2


Reproducible: Always
Comment 1 Antonio Rojas 2014-07-10 20:42:47 UTC
5.0.90 compiles correctly, so this is most likely caused by d5005c1
Comment 2 Scarlett Moore 2014-07-10 22:10:30 UTC
Same compilation failure for the 5.0.91 tar here: http://starsky.19inch.net/~jr/tmp/plasma-5.0.0/
Comment 3 Jan Grulich 2014-07-11 07:26:00 UTC
Git commit ea60534cb4d6f4a63a97c26d11db7b576aff532d by Jan Grulich.
Committed on 11/07/2014 at 07:25.
Pushed by grulich into branch 'master'.

Fix compilation against ModemManager 1.2

M  +0    -5    src/generictypes.h
M  +1    -1    src/sms.cpp

http://commits.kde.org/libmm-qt/ea60534cb4d6f4a63a97c26d11db7b576aff532d
Comment 4 Jan Grulich 2014-07-11 07:26:30 UTC
Git commit 72d235c09314471f82274e05b4cde94d245616b7 by Jan Grulich.
Committed on 11/07/2014 at 07:25.
Pushed by grulich into branch 'Plasma/5.0'.

Fix compilation against ModemManager 1.2

M  +0    -5    src/generictypes.h
M  +1    -1    src/sms.cpp

http://commits.kde.org/libmm-qt/72d235c09314471f82274e05b4cde94d245616b7
Comment 5 Ben Cooksley 2024-12-23 18:23:48 UTC
Bulk transfer as requested in T17796