Fix compilation against ModemManager 1.2

BUG:337336